# IpsCoro

./: CMakeLists.txt  readme.md
include/ips/coro/: definitions.hpp  task.hpp  version.hpp
playground/: CMakeLists.txt  main.cpp
sources/: version.cpp
tests/: CMakeLists.txt
